# lms

./: .dockerignore  .env  .env.sample  .gitignore  docker-compose-dev.yml  docker-compose.override.yml  docker-compose.traefik.yml  docker-compose.yml  exportVariables.txt  setup.sh  traefik.yml
backend/: Dockerfile  api.py  backend.dockerfile  celeryworker.dockerfile  main.py  prestart.sh  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 3b6dffc7b4c4_.py  d58973529641_.py
backend/app/: .env  api.py  base.py  config.py  db.py
backend/app/auth/: models.py  schemas.py  service.py  views.py
lms-master/: .env  docker-compose.yml
lms-master/backend/: celeryworker.dockerfile
